--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Siber Güvenlik Macerası",
   "short_name": "Siber Macera",
   "description": "Siber güvenlik eğitimi için interaktif oyun",
-  "start_url": "/index.html",
+  "start_url": "/teknofest_siberguvenlik/",
   "display": "fullscreen",
   "display_override": ["fullscreen", "standalone", "minimal-ui"],
   "orientation": "any",
@@ -11,26 +11,26 @@
   "categories": ["education", "games"],
   "lang": "tr",
   "dir": "ltr",
-  "scope": "/",
+  "scope": "/teknofest_siberguvenlik/",
   "icons": [
     {
-      "src": "assets/Asset 5.svg",
+      "src": "/teknofest_siberguvenlik/assets/Asset 5.svg",
       "sizes": "any",
       "type": "image/svg+xml",
       "purpose": "any maskable"
     },
     {
-      "src": "assets/Asset 5.svg",
+      "src": "/teknofest_siberguvenlik/assets/Asset 5.svg",
       "sizes": "152x152",
       "type": "image/svg+xml"
     },
     {
-      "src": "assets/Asset 5.svg", 
+      "src": "/teknofest_siberguvenlik/assets/Asset 5.svg", 
       "sizes": "167x167",
       "type": "image/svg+xml"
     },
     {
-      "src": "assets/Asset 5.svg",
+      "src": "/teknofest_siberguvenlik/assets/Asset 5.svg",
       "sizes": "180x180", 
       "type": "image/svg+xml"
     }
