--- a/manifest.json
+++ b/manifest.json
@@ -1,47 +1,61 @@
 {
-  "name": "Siber Güvenlik Macerası",
+  "name": "Siber Macera - Siber Güvenlik Oyunu",
   "short_name": "Siber Macera",
-  "description": "Siber güvenlik eğitimi için interaktif oyun",
-  "start_url": "/teknofest_siberguvenlik/",
-  "display": "fullscreen",
-  "display_override": ["fullscreen", "standalone", "minimal-ui"],
-  "orientation": "any",
+  "description": "Siber güvenlik konularında eğlenceli ve öğretici oyun",
+  "start_url": "./index.html",
+  "display": "standalone",
+  "orientation": "landscape",
   "theme_color": "#0a1428",
-  "background_color": "#0a1428",
-  "categories": ["education", "games"],
+  "background_color": "#1a2844",
+  "categories": ["education", "games", "security"],
   "lang": "tr",
   "dir": "ltr",
-  "scope": "/teknofest_siberguvenlik/",
+  "scope": "./",
+  "id": "siber-macera-game",
+  "prefer_related_applications": false,
   "icons": [
     {
-      "src": "/teknofest_siberguvenlik/assets/Asset 5.svg",
-      "sizes": "any",
-      "type": "image/svg+xml",
+      "src": "assets/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/teknofest_siberguvenlik/assets/Asset 5.svg",
-      "sizes": "152x152",
-      "type": "image/svg+xml"
-    },
-    {
-      "src": "/teknofest_siberguvenlik/assets/Asset 5.svg", 
-      "sizes": "167x167",
-      "type": "image/svg+xml"
-    },
-    {
-      "src": "/teknofest_siberguvenlik/assets/Asset 5.svg",
-      "sizes": "180x180", 
-      "type": "image/svg+xml"
+      "src": "assets/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
-  "prefer_related_applications": false,
-  "edge_side_panel": {
-    "preferred_width": 800
-  },
-  "handle_links": "preferred",
+  "screenshots": [
+    {
+      "src": "assets/screenshot-wide.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide"
+    }
+  ],
   "launch_handler": {
-    "client_mode": ["focus-existing", "auto"]
+    "client_mode": "focus-existing"
   },
-  "capture_links": "new-client"
+  "edge_side_panel": {
+    "preferred_width": 480
+  },
+  "protocol_handlers": [],
+  "file_handlers": [],
+  "shortcuts": [
+    {
+      "name": "Hızlı Başlat",
+      "short_name": "Başlat",
+      "description": "Oyunu hızlıca başlat",
+      "url": "./index.html?quick_start=true",
+      "icons": [
+        {
+          "src": "assets/icon-192x192.png",
+          "sizes": "192x192"
+        }
+      ]
+    }
+  ]
 }
+
